Fix Lineup page height when no educators visible on smaller screens

--- a/_sass/layouts/pages/_misc.scss
+++ b/_sass/layouts/pages/_misc.scss
@@ -3,7 +3,12 @@
 */
 
 body.lineup {
+
     .content-box {
+        @media (max-width: 991px) {
+            min-height: 100vh;     
+        }
+
         @media (max-width: 767px) {
             grid-template-columns: 0.5fr 8fr 0.5fr;
         }
